# solana-substreams-transfers

./: Cargo.toml  README.md  substreams.yaml
proto/: transfers.proto
src/: lib.rs
src/pb/: .last_generated_hash  mod.rs
