python3 -c "open('/home/aryan07/solana-transfers/Cargo.toml','wb').write(b'[package]\nname = \"solana_transfers\"\nversion = \"0.1.0\"\nedition = \"2021\"\n\n[lib]\ncrate-type = [\"cdylib\"]\n\n[dependencies]\nsubstreams = \"0.5\"\nsubstreams-solana = \"0.2\"\nprost = \"0.11\"\nbs58 = \"0.5\"\n\n[profile.release]\nlto = true\nopt-level = \"s\"\nstrip = \"debuginfo\"\n')"

xxd ~/solana-transfers/Cargo.toml | head -3
cat ~/solana-transfers/Cargo.toml